--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-separator": "^1.1.8",
+        "@radix-ui/react-slot": "^1.2.4",
         "chart.js": "^4.4.1",
         "chartjs-plugin-annotation": "^3.0.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "framer-motion": "^12.29.0",
         "lucide-react": "^0.303.0",
         "papaparse": "^5.4.1",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "recharts": "^2.15.4",
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
