--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-separator": "^1.1.8",
         "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-tabs": "^1.1.13",
+        "@tanstack/react-table": "^8.21.3",
         "chart.js": "^4.4.1",
         "chartjs-plugin-annotation": "^3.0.1",
         "class-variance-authority": "^0.7.1",
