--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         git config --global user.name "github-actions"
         git config --global user.email "github-actions@github.com"
-        git add public/weather_log.csv
+        git add public/weather_log.csv public/pm25_log.csv
         git commit -m "Update weather_log.csv [auto]" || echo "No changes to commit"
 
     - name: Push CSV changes to main
